[55] - Enable kotlin explicit API compiler feature (#56)
* Refactor build.gradle.kts
* Bump kotlin language level from 1.3 to 1.4
* Provide methods to access the list of the names of RisTags
* Use java11 List.of instead of Arrays.asList
* Activate expicitApi feature
* Bump rxjava2 from 2.2.19 to 2.2.20
* work around kordamp issue 331
* Remove accidental duplication
* Add specs